--- a/css/main.css
+++ b/css/main.css
@@ -145,14 +145,18 @@ input::placeholder {
     background: #fff;
     border-radius: 3px;
     color: #000;
-    padding: 50px 43px;
+    padding: 3% 4%;
 }
+.short-info {
+    margin-right: 3%;
+}
+
 .full-info {
     flex: 0.97;
 }
 .poster {
     display: block;
-    margin-top: -80px;
+    margin-top: -40%;
     margin-bottom: 20px;
 }
 .button {
@@ -174,14 +178,26 @@ input::placeholder {
     margin: 0;
     list-style: none;
     text-decoration: underline;
+    line-height: 160%;
 }
+
 .tabs-item {
     text-decoration: none;
     color: #000;
-    margin-right: 40px;
+    
     font-size: 18px;
     height: 21px;
 }
+.tabs {
+    display: flex;
+    -ms-align-items: center;
+    align-items: center;
+    margin-bottom: 4%;
+}
+.tabs-item:not(:last-child){
+    margin-right: 4%;
+}
+    
 .tabs-item-active {
     color: #FF8F27;
 }
@@ -192,9 +208,133 @@ input::placeholder {
 .tabs-content {
     margin-right: 70px;
 }
+.text {
+    font-size: 16px;
+    line-height: 160%;
+    margin-top: 0;
+}
+.subscribe-form {
+    display: flex;
+    margin-bottom: 40px;
+}
+.subscribe-title {
+    font-weight: 900;
+    font-size: 16px;
+    line-height: 150%;
+    color: #000000;
+    margin-top: 0;
+    margin-bottom: 14px;
+}
+.subscribe-input {
+    background: rgba(196, 196, 196, 0.5);
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    padding: 12px 18px;
+    border: none;
+    color: #AEAEAE;
+    font-size: 14px;
+    line-height: 16px;
+}
 
+.subscribe-button {
+    background: #FF8F27;
+    border-radius: 0px 5px 5px 0px;
+    border: none;
 
-
+}
+@media (max-width: 1200px) {
+    .container {
+        max-width: 960px;
+    }
+    .tabs-item {
+        font-size: 16px;
+    }
+    
+}
+@media (max-width: 992px) {
+    .container {
+        max-width: 740px;
+    }
+    .tabs {
+        flex-wrap: wrap;
+    }
+    .tabs-item {
+        flex-basis: 20%;
+        line-height: 2;
+    }
+    .full-content {
+        flex-wrap: wrap;
+    }
+    .tabs-content {
+        margin-bottom: 4%;
+    }
+    .text{
+        font-size: 14px;
+    }
+    .actors-list {
+        font-size: 14px;
+    }
+}
+@media (max-width: 768px){
+   .container {
+        max-width: 540px;
+    } 
+    .more {
+        display: none;
+    }
+    .tabs-item {
+        flex-basis: 33%;
+        line-height: 2;
+    }
+    .tabs-content {
+        margin-right: 0px;
+    }
+}
+@media (max-width: 578px){
+    .container {
+        max-width: 90%;
+    }
+    .header {
+        flex-wrap: wrap;
+    }
+    .search {
+        flex-basis: 100%;
+        order: 3;
+        margin-top: 5%;
+    }
+    .content {
+        -webkit-flex-wrap: wrap;
+        -moz-flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
+        -o-flex-wrap: wrap;
+        flex-wrap: wrap;
+    }
+    .short-info {
+        margin-bottom: 5%;
+    }
+    .actors-list,
+    .actors-title{
+        display: none;
+    }
+    .movie-info {
+        flex-wrap: wrap;
+    }
+    .play {
+        flex-basis: 100%;
+        margin-top: 5%;
+    }
+    .short-info {
+        margin-right: 0;
+    }
+    .button {
+        width: 100%;
+    }
+    .poster {
+        margin-top: -20%;
+        display: inline-block;
+        width: 100%;
+    }
+}
 
 
 
