--- a/css/main.css
+++ b/css/main.css
@@ -206,7 +206,11 @@ input::placeholder {
     justify-content: space-between;
 }
 .tabs-content {
+    display: none;
     margin-right: 70px;
+}
+.visible {
+    display: block;
 }
 .text {
     font-size: 16px;
